# marketsmith

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
docs/: make_demo.py
src/marketsmith/: __init__.py  __main__.py  analytics.py  arbitrage.py  cli.py  feed.py  models.py  server.py  tools.py
tests/unit/: test_analytics.py  test_arbitrage.py  test_feed.py  test_models.py  test_tools.py
