[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketsmith"
version = "0.1.0"
description = "MCP server for prediction markets - give your AI agent an edge."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Viprasol Tech Private Limited", email = "support@viprasol.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-agents",
    "llm",
    "prediction-markets",
    "kalshi",
    "polymarket",
    "arbitrage",
    "kelly-criterion",
    "expected-value",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
server = [
    "mcp>=1.0",
]
dev = [
    "ruff>=0.5,<0.16",
    "mypy>=1.10",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/Viprasol-Tech/marketsmith"
Repository = "https://github.com/Viprasol-Tech/marketsmith"
Issues = "https://github.com/Viprasol-Tech/marketsmith/issues"
Website = "https://viprasol.com"

[project.scripts]
marketsmith = "marketsmith.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/marketsmith"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = ["B008", "B027", "UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src"]

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

# server.py decorates functions with the MCP SDK's @tool() decorator. Because the
# SDK is an optional dependency with no stubs in this environment, mypy treats the
# decorator as untyped; allow that for the server module only.
[[tool.mypy.overrides]]
module = "marketsmith.server"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
